--- a/react-client/package.json
+++ b/react-client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.32.2",
     "react-scripts": "4.0.3",
+    "react-window": "^1.8.7",
     "typescript": "^4.4.4",
     "web-vitals": "^1.0.1"
   },
